Fixed vertical rhythm on the documentation pages. Please stop adjusting the margins to make them smaller; it breaks the vertical rhythm.

--- a/styles/doc.css
+++ b/styles/doc.css
@@ -404,7 +404,7 @@ ul.chunklist_children {
 }
 
 .docs .layout-menu ul.parent-menu-list li {
-    margin: .75em 0;
+    margin: 1.5em 0;
 }
 
 .docs .layout-menu ul.parent-menu-list > li:first-child {
@@ -426,7 +426,7 @@ ul.chunklist_children {
 
 .docs .layout-menu ul.child-menu-list {
     margin: 0;
-    padding:.75em 0 .75em .25em;
+    padding:1.5em 0 1.5em .25em;
     border: 0;
 }
 
@@ -485,7 +485,7 @@ body.docs #layout {
     background-color: #f5f5f5;
     padding: .75em;
     text-decoration: none;
-    margin-bottom:.75em;
+    margin-bottom:1.5em;
 }
 
 .docs .manualnavbar p:last-child {
